# saidata-gen

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISTRIBUTION.md  Dockerfile  LICENSE  MANIFEST.in  README.md  REPOSITORY_URL_REORGANIZATION_SUMMARY.md  SECURITY.md  TEST_COVERAGE_SUMMARY.md  example_system_dependency_usage.py  performance_optimization_recommendations.md  provider_template_analysis_report.txt  pyproject.toml  pytest.ini  security_review_recommendations.md  task_7_implementation_summary.md  test_core_engine.py
.github/: CODEOWNERS  pull_request_template.md  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  (+1 more)
docs/: README.md  api-reference.md  cli-reference.md  configuration.md  deployment.md  installation.md  migration-guide.md  performance_and_caching.md  quickstart.md  repository-url-management.md  template_engine.md  troubleshooting.md
examples/: README.md  fetcher_error_handling_example.py  package_comparison_example.py  performance_optimization_example.py
saidata_gen/: __init__.py
schemas/: saidata-0.1.schema.json
scripts/: analyze_provider_refactoring.py  analyze_provider_templates.py  batch_migrate_fetchers.py  build_binary.py  build_dist.py  build_docker.py  cleanup_provider_configs.py  generate_config_quality_report.py  list_packages.py  list_packages_all.sh  migrate_fetchers_to_url_manager.py  migrate_provider_templates.py  test_docker_config.py  version_manager.py
software_lists/: README.md  ai_tools_local.txt  data_science_ml.txt  databases.txt  devops_infrastructure.txt  gaming_entertainment.txt  internet_tools.txt  mobile_development.txt  multimedia_graphics.txt  productivity_office.txt  programming_languages.txt  security_tools.txt  system_administration.txt  web_development.txt
tests/: conftest.py  run_comprehensive_tests.py  test_additional_fetchers.py  test_ai_enhancement_system.py  test_apt_fetcher.py  test_batch_pipeline_integration.py  test_brew_fetcher.py  test_cache.py  test_cli_integration.py  test_config_setup_integration.py  test_core_engine.py  test_core_interfaces.py  test_coverage_comprehensive.py  test_coverage_config.py  test_data_aggregation.py  test_directory_structure_generator.py  test_dnf_fetcher.py  test_end_to_end_integration.py  test_enhanced_schema_validation.py  test_fetcher_base.py  test_fetcher_error_handler.py  test_fetcher_factory.py  test_generator_core.py  test_graceful_degradation_manager.py  test_integration_workflow_enhanced.py  test_integration_workflows.py  test_interfaces_comprehensive.py  test_metadata_enhancement.py  test_metadata_generator.py  test_ml_dataset.py  test_ml_export.py  test_ml_training.py  test_models.py  test_package_comparison.py  test_performance.py  test_performance_and_load.py  test_performance_benchmarks.py  test_quality_assessment.py  test_rag_engine.py  test_rag_providers.py  (+15 more)
(+257 files in other folders)
